@@ -29,8 +29,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
       libicu-dev \
       # for dom
       libxml2-dev \
-      # for ldap
-      libldap2-dev \
       # for mcrypt
       libmcrypt-dev \
       # for memcached
@@ -58,7 +56,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN docker-php-ext-configure gd \
-    && docker-php-ext-configure ldap --with-libdir=lib/x86_64-linux-gnu \
     && docker-php-ext-install -j$(nproc) \
       bcmath \
       bz2 \
@@ -68,7 +65,6 @@ RUN docker-php-ext-configure gd \
       gd \
       gettext \
       intl \
-      ldap \
       mysqli \
       opcache \
       pcntl \
@@ -113,6 +109,7 @@ RUN apt-get update \
   && echo 'deb-src https://deb.nodesource.com/node_10.x jessie main' >> /etc/apt/sources.list.d/nodesource.list \
   && apt-get update \
   && apt-get install -y nodejs \
+  && apt-get install -y npm \
   && npm install -g yarn \
   && npm cache clean --force \
   && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
